--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "main.c" "menu.c" "menu.h" "i2c_display.c" "i2c_display.h"
                     INCLUDE_DIRS ".")
