--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c" "menu.c" "menu.h" "i2c_display.c" "i2c_display.h"
+idf_component_register(SRCS "main.c" "menu.c" "menu.h" "i2c_display.c" "i2c_display.h" "sd_card_player.c" "sd_card_player.h"
                     INCLUDE_DIRS ".")
+set(COMPONENT_ADD_INCLUDEDIRS .)
