--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,10 @@ cmake_minimum_required(VERSION 3.5)
 
 set(EXTRA_COMPONENT_DIRS C:/esp/external_libs/esp-idf-lib-v0.9.4/components)
 
+include($ENV{ADF_PATH}/CMakeLists.txt)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
 project(example-hd44780-i2c)
+
+message([IDF] "IDF : $ENV{IDF_PATH}")
+message([ADF] "ADF : $ENV{ADF_PATH}")
