SD-card code merged with internet radio

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-# idf_component_register(SRCS "main.c"
+# idf_component_register(SRCS "sd_card_player.c" "main.c"
 # "menu.c" "menu.h"
 # "i2c_display.c" "i2c_display.h"
 # "lib/buttonreader.c" "lib/buttonreader.h"
