goertzel task reading values

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,7 +11,9 @@ set(COMPONENT_SRCS "main.c"
 "lib/buttonreader.c" "lib/buttonreader.h"
 "lib/internet_radio.c" "lib/internet_radio.h"
 "lib/ntp.c" "lib/ntp.h" "lib/wifi_setup.c" "lib/wifi_setup.h"
-"lib/sd_card_player.c" "lib/sd_card_player.h")
+"lib/sd_card_player.c" "lib/sd_card_player.h"
+"goertzel_filter.c" "goertzel_filter.h"
+"lib/goertzel.c" "lib/goertzel.h")
 set(COMPONENT_ADD_INCLUDEDIRS .)
 
 register_component()
